# samurai17-new

./: .gitignore  .gitmodules  11vs201A-sample.txt  11vs201B-sample.txt  11vs21.txt  11vs71-sample.txt  11vs71.txt  11vs71A-sample.txt  11vs91A-sample.txt  201Bvs11sample.txt  README.md  Svs11sample.txt  Svs202-1Bsample.txt  T75  T75alter  a  battle.py  battle.sh  battle_sample_course.sh  beamZVSsample_sample-course-vision100_hayai_alta+0  beamZVSsample_sample-course-vision100_hayai_alta+0bi  cartpole_model.pkl  course_generator.py  course_slicer.py  enemycalctest  enemycalctest_alter  kusoVSbeamZ_sample-course-vision100_10_4  kusoVSbeamZ_sample-course-vision100_10_7  log1  log2  new  outputM3.txt  sampleVSbeamZ  sampleVSbeamZ_sample-course-vision100_10_10  sampleVSbeamZ_sample-course-vision100_2  sampleVSbeamZ_sample-course-vision100_hayai  sampleVSbeamZ_sample-course-vision100_hayai_alta  sampleVSbeamZ_sample-course-vision100_hayai_alta_+100  samurai  setup.py  (+3 more)
course/: batch.sh  (+38 more)
player/: CMakeLists.txt  appleboy.cpp  greedx.cc  greedx2.cc  greedx3.cc  greedx4.cc  greedy.cpp  greedy2.cc  greedyC.cpp  greedyC.ps  ice.cpp  kuso.cpp  player  raceState.cpp  raceState.hpp  rainforce.cc  reinforce.cc  sample.cpp  vulture.cpp
player/beam/: player
player/beam12/: player
player/beam201A/: player
player/beam201B/: player
player/beam202-1B/: player
player/beam21/: player
player/beam23/: player
player/beam71/: player
player/beam71A/: player
player/beam91A/: player
player/beamS/: player
player/beamS2/: player
player/beamT15/: player
player/beamT75/: player
(+144 files in other folders)
